[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kr-finbert-mcp"
version = "0.1.0"
description = "MCP server exposing snunlp/KR-FinBert-SC sentiment analysis as a tool"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "transformers>=4.40",
    "torch>=2.1",
    "hf_xet>=0.1",
]

[project.scripts]
kr-finbert-mcp = "kr_finbert_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
